--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
          </div>
         </div>
         <div id="cta1" class="mt-4 d-none">
-    <a href="" class="btn-roxo" style="background-color: orange;">
+    <a href="https://pay.hotmart.com/N84704999W" class="btn-roxo" style="background-color: orange;">
       <span class="span-btn">QUIERO UNIRME</span>
       <span class="span-btn2"></span>
     </a>
@@ -103,7 +103,7 @@
   // Função para exibir o botão após 1380 segundos
       setTimeout(function() {
         document.getElementById("cta1").classList.remove("d-none");
-      }, 1380000); // 1380 segundos em milissegundos
+      }, 13); // 1380 segundos em milissegundos
     </script>
     </div>
   </header>
