--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
          </div>
         </div>
         <div id="cta1" class="mt-4 d-none">
-    <a href="https://pay.hotmart.com/N84704999W" class="btn-roxo" style="background-color: orange;">
+    <a href="" class="btn-roxo" style="background-color: orange;">
       <span class="span-btn">QUIERO UNIRME</span>
       <span class="span-btn2"></span>
     </a>
