--- a/Ps/index.quiz.html
+++ b/Ps/index.quiz.html
@@ -133,7 +133,7 @@
       document.getElementById("terceira").classList.remove("hide")
     }
     function redirect() {
-      location.href = "https://sistemacerovientre.online/" // SEU LINK AQUI
+      location.href = "https://sistemacerovientre.online" // SEU LINK AQUI
     }
   </script>
 </body>
