--- a/index.html
+++ b/index.html
@@ -94,10 +94,21 @@
          </div>
         </div>
         <div id="cta1" class="mt-4 d-none">
-    <a href="" class="btn-roxo" style="background-color: orange;">
+    <a href="https://pay.hotmart.com/N84704999W?checkoutMode=10" class="btn-roxo" style="background-color: orange;">
       <span class="span-btn">QUIERO UNIRME</span>
       <span class="span-btn2"></span>
-    </a>
+    </a><script type="text/javascript">
+  function importHotmart(){ 
+    var imported = document.createElement('script'); 
+    imported.src = 'https://static.hotmart.com/checkout/widget.min.js'; 
+    document.head.appendChild(imported); 
+    var link = document.createElement('link'); 
+    link.rel = 'stylesheet'; 
+    link.type = 'text/css'; 
+    link.href = 'https://static.hotmart.com/css/hotmart-fb.min.css'; 
+    document.head.appendChild(link);  } 
+  importHotmart(); 
+ </script>  
   </div>
   <script>
   // Função para exibir o botão após 1380 segundos
