--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
          </div>
         </div>
         <div id="cta1" class="mt-4 d-none">
-    <a href="https://pay.hotmart.com/N84704999W?checkoutMode=10" class="btn-roxo" style="background-color: orange;">
+    <a href="https://payment.hotmart.com/next/G76401590A?checkoutMode=10&bid=1691310119978" class="btn-roxo" style="background-color: orange;">
       <span class="span-btn">QUIERO UNIRME</span>
       <span class="span-btn2"></span>
     </a><script type="text/javascript">
