--- a/UP/index.html
+++ b/UP/index.html
@@ -145,7 +145,11 @@
   </body>
 
           <a href="#cta" class="btn btn-lg btn-success py-3 px-5 mb-0">SIM, QUERO APROVEITAR ESSA OPORTUNIDADE</a>
-
+<div id="cta1" class="mt-4 d-none">
+    <a href="https://payment.hotmart.com/next/G76401590A?checkoutMode=10&bid=1691310119978" class="btn-roxo" style="background-color: orange;">
+      <span class="span-btn">QUIERO UNIRME</span>
+      <span class="span-btn2"></span>
+    </a><script type="text/javascript">
         </div>
       </div>
     </div>
