--- a/UP/index.html
+++ b/UP/index.html
@@ -144,14 +144,9 @@
 
   </body>
 
-          <a href="#cta" class="btn btn-lg btn-success py-3 px-5 mb-0">SIM, QUERO APROVEITAR ESSA OPORTUNIDADE</a>
+          <a href="https://payment.hotmart.com/next/G76401590A?checkoutMode=10&bid=1691310119978" class="btn btn-lg btn-success py-3 px-5 mb-0">SIM, QUERO APROVEITAR ESSA OPORTUNIDADE</a>
+
 <div id="cta1" class="mt-4 d-none">
-    <a href="https://payment.hotmart.com/next/G76401590A?checkoutMode=10&bid=1691310119978" class="btn-roxo" style="background-color: orange;">
-      <span class="span-btn">QUIERO UNIRME</span>
-      <span class="span-btn2"></span>
-    </a><script type="text/javascript">
-        </div>
-      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
