--- a/PS/index.quiz.html
+++ b/PS/index.quiz.html
@@ -93,7 +93,7 @@
   fbq('track', 'AddToCart');
 </script>
 <noscript><img height="1" width="1" style="display:none"
-  src="https://www.facebook.com/tr?id=602124238701056&ev=PageView&noscript=1"
+  src="https://www.facebook.com/tr?id=602124238701056&ev=AddToCart&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
 
