--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
          </div>
         </div>
         <div id="cta1" class="mt-4 d-none">
-    <a href="https://pay.hotmart.com/G85667558Q" class="btn-roxo" style="background-color: orange;">
+    <a href="https://pay.hotmart.com/C85794040M?checkoutMode=10" class="btn-roxo" style="background-color: orange;">
       <span class="span-btn">QUIERO UNIRME</span>
       <span class="span-btn2"></span>
     </a><script type="text/javascript">
