--- a/UP/index.html
+++ b/UP/index.html
@@ -41,7 +41,7 @@
 
          <p class="lead">Ei, aquí es Antonio Rodrigues, del Sistema Zero Barriga. </p>
 
-<p class="lead">  Quisiera felicitarte personalmente por tu pedido del Sistema Zero Barriga. </p>
+<p class="lead">  Quisiera felicitarte personalmente por tu pedido del Sistema Cero Vientre. </p>
 
 <p class="lead">  Con nuestro más nuevo producto, serás capaz de perder peso, eliminar grasa extra y desvanecer estrías en todo tu cuerpo, más rápido que nunca. </p>
 
@@ -49,7 +49,7 @@
 
 <p class="lead">  Pero mientras tanto... necesito compartir algo muy importante contigo. </p>
 
-<p class="lead">  Muchos miembros del Sistema Zero Barriga me hacen la misma pregunta. </p>
+<p class="lead">  Muchos miembros del Sistema Cero Vientre me hacen la misma pregunta. </p>
 
 <p class="lead">  Y la pregunta es: </p>
 
@@ -59,11 +59,11 @@
 
 <p class="lead">  El Dr. Charles ha decidido hacer una oferta exclusiva solo para nuevos miembros... y esto te ayudará a hacer que tu cuerpo sea aún más sexy y hermoso, sin gastar fortunas en costosos procedimientos estéticos. </p>
 
-<p class="lead">  ¡Conoce el Protocolo Zero Flacidez y Estrías! </p>
+<p class="lead">  ¡Conoce el Sistema Cero Flacidez y Estrías! </p>
 
-<p class="lead">  El Protocolo Zero Flacidez y Estrías es un protocolo simple, paso a paso, donde descubrirás cómo eliminar la flacidez y las estrías en las áreas más problemáticas... ¡de manera natural! </p>
+<p class="lead">  El Sistema Cero Flacidez y Estrías es un protocolo simple, paso a paso, donde descubrirás cómo eliminar la flacidez y las estrías en las áreas más problemáticas... ¡de manera natural! </p>
 
-<p class="lead">  Esto es lo que encontrarás en el Protocolo Zero Flacidez y Estrías: </p>
+<p class="lead">  Esto es lo que encontrarás en el Sistema Cero Flacidez y Estrías: </p>
 
 <p class="lead">  La "Rutina de 3 Pasos" para eliminar la flacidez de la piel y centímetros de tu cintura. </p>
 
@@ -99,7 +99,7 @@
 
 <p class="lead">  ... sin gastar una fortuna en costosos procedimientos estéticos. </p>
 
-<p class="lead">  Todo esto es posible con el Protocolo Zero Flacidez y Estrías del Dr. Charles. </p>
+<p class="lead">  Todo esto es posible con el Sistema Cero Flacidez y Estrías del Dr. Charles. </p>
 
 <p class="lead">  Por lo general, este sistema se vende por $297 dólares. </p>
 
@@ -109,7 +109,7 @@
 
 <p class="lead">  Es un súper regalo del Dr. Charles como agradecimiento por haber confiado en su trabajo. </p>
 
-<p class="lead">  Para agregar este Protocolo Zero Flacidez y Estrías a tu pedido hoy, simplemente haz clic en el botón de abajo ahora mismo. </p>
+<p class="lead">  Para agregar este Sistema Cero Flacidez y Estrías a tu pedido hoy, simplemente haz clic en el botón de abajo ahora mismo. </p>
 
 <p class="lead">  Con este sistema, el Dr. Charles ya ha ayudado a mujeres como Ana... </p>
 
@@ -123,7 +123,7 @@
 
 <p class="lead">  Funciona de la siguiente manera... </p>
 
-<p class="lead">  Usa el Protocolo Zero Flacidez y Estrías durante 7 largos días, y si no ves cómo los brazos temblorosos desaparecen, el ombligo se vuelve más firme, la piel alrededor de la cintura mejora y las estrías blancas desaparecen de tus glúteos y barriga... </p>
+<p class="lead">  Usa el Sistema Cero Flacidez y Estrías durante 7 largos días, y si no ves cómo los brazos temblorosos desaparecen, el ombligo se vuelve más firme, la piel alrededor de la cintura mejora y las estrías blancas desaparecen de tus glúteos y barriga... </p>
 
 <p class="lead">  O si NO AMAS el producto, y lo fácil que es de seguir... </p>
 
