--- a/DW/index.html
+++ b/DW/index.html
@@ -37,7 +37,7 @@
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
           
-          <p class="lead">Estás recibiendo un descuento inmediato del 50% en el Protocolo Zero Flacidez y Estrias, ¡Solo hoy!</p>
+          <p class="lead">Estás recibiendo un descuento inmediato del 50% en el Sistema Cero Flacidez y Estrias, ¡Solo hoy!</p>
 
 <p class="lead">Bien, quizás $57 todavía sea un poco alto.</p>
 
@@ -71,7 +71,7 @@
 
 <p class="lead">AGREGAR A MI PEDIDO</p>
 
-          <a href="#cta" class="btn btn-lg btn-success py-3 px-5 mb-0">SIM, QUERO APROVEITAR ESSA OPORTUNIDADE</a>
+          <a href="#cta" class="btn btn-lg btn-success py-3 px-5 mb-0">¡SÍ! QUIERO APROVECHAR ESTA OPORTUNIDAD.</a>
 
         </div>
       </div>
