--- a/UP/index.html
+++ b/UP/index.html
@@ -143,6 +143,19 @@
  
 
   </body>
+<!-- HOTMART - Upsell Widget -->
+<div id="box_hotmart"></div>
+<script src="https://pay.hotmart.com/assets/js/hotmart.upsell_checkout.js"></script>
+
+<script>
+opts = {
+key: 'USL-110587-341488-f22a2a8a19ff7b2b273f31e5ecab862d',
+width: '650' ,
+height: '420'
+};
+Upsell.Widget.show(opts);
+</script>
+<!-- HOTMART - Upsell Widget [end] -->
 
           <a href="https://payment.hotmart.com/next/G76401590A?checkoutMode=10&bid=1691310119978" class="btn btn-lg btn-success py-3 px-5 mb-0">SIM, QUERO APROVEITAR ESSA OPORTUNIDADE</a>
 
