--- a/DW/index.html
+++ b/DW/index.html
@@ -72,6 +72,19 @@
 <p class="lead">AGREGAR A MI PEDIDO</p>
 
           <a href="#cta" class="btn btn-lg btn-success py-3 px-5 mb-0">¡SÍ! QUIERO APROVECHAR ESTA OPORTUNIDAD.</a>
+<!-- HOTMART - Upsell Widget -->
+<div id="box_hotmart"></div>
+<script src="https://pay.hotmart.com/assets/js/hotmart.upsell_checkout.js"></script>
+
+<script>
+opts = {
+key: 'USL-110587-341500-894af8fb1fd50f9ad40f25fb44ad3292',
+width: '650' ,
+height: '420'
+};
+Upsell.Widget.show(opts);
+</script>
+<!-- HOTMART - Upsell Widget [end] -->
 
         </div>
       </div>
