--- a/UP/index.html
+++ b/UP/index.html
@@ -157,8 +157,7 @@ Upsell.Widget.show(opts);
 <p class="lead">  Todo lo que necesitas hacer es hacer clic en el botón de abajo ahora mismo..."</p>
 
 
-          <a href= "class="btn btn-lg btn-success py-3 px-5 mb-0">SIM, QUERO APROVEITAR ESSA OPORTUNIDADE</a>
-
+         <a href="#cta" class="btn btn-lg btn-success py-3 px-5 mb-0">¡SÍ! QUIERO APROVECHAR ESTA OPORTUNIDAD.</a>
 <div id="cta1" class="mt-4 d-none">
     </div>
 
