--- a/UP/index.html
+++ b/UP/index.html
@@ -89,6 +89,8 @@
 
 <p class="lead">  Probablemente ya hayas tenido o tengas estrías en la piel debido a la ganancia y pérdida de peso. </p>
 
+  <div id="cta">        
+          
   </body>
 <!-- HOTMART - Upsell Widget -->
 <div id="box_hotmart"></div>
