--- a/DW/index.html
+++ b/DW/index.html
@@ -51,6 +51,8 @@
 
 <p class="lead">Porque ya pasé por eso y sé cómo una baja autoestima debido a la apariencia de la piel después de adelgazar puede afectar nuestra salud mental.</p>
 
+         <div id="cta">
+          
           <!-- HOTMART - Upsell Widget -->
 <div id="box_hotmart"></div>
 <script src="https://pay.hotmart.com/assets/js/hotmart.upsell_checkout.js"></script>
