--- a/PS/index.quiz.html
+++ b/PS/index.quiz.html
@@ -40,7 +40,7 @@
       padding: 10px;
     }
     .aviso {
-      background-color: black;
+      background-color: red;
       color: white;
       text-align: center;
       font-size: 18px;
@@ -78,30 +78,11 @@
       display: none;
     }
   </style>
-
- <!-- Meta Pixel Code -->
-<script>
-  !function(f,b,e,v,n,t,s)
-  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-  n.queue=[];t=b.createElement(e);t.async=!0;
-  t.src=v;s=b.getElementsByTagName(e)[0];
-  s.parentNode.insertBefore(t,s)}(window, document,'script',
-  'https://connect.facebook.net/en_US/fbevents.js');
-  fbq('init', '1224122878240468');
-  fbq('track', 'AddToCart');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-  src="https://www.facebook.com/tr?id=1224122878240468&ev=AddToCart&noscript=1"
-/></noscript>
-<!-- End Meta Pixel Code -->
-
 </head>
 <body> 
   <div class="container">
     <div class="aviso">
-      ¡ATENCIÓN! RESPONDE LAS PREGUNTAS PARA ACCEDER A LA PRESENTACIÓN PROHIBIDA...
+      ¡ATENCIÓN! RESPONDE A LAS PREGUNTAS PARA ACCEDER A LA PRESENTACIÓN PARA ENTENDER CÓMO PERDER 10 KILOS EN LOS PRÓXIMOS 21 DÍAS...
     </div>
     <div class="black">
       
