--- a/index.html
+++ b/index.html
@@ -50,25 +50,6 @@
   <noscript><img height="1" width="1" style="display:none"
     src="https://www.facebook.com/tr?id=1171118557124326&ev=PageView&noscript=1"
   /></noscript>
-
-  <!-- Meta Pixel Code -->
-<script>
-  !function(f,b,e,v,n,t,s)
-  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-  n.queue=[];t=b.createElement(e);t.async=!0;
-  t.src=v;s=b.getElementsByTagName(e)[0];
-  s.parentNode.insertBefore(t,s)}(window, document,'script',
-  'https://connect.facebook.net/en_US/fbevents.js');
-  fbq('init', '1224122878240468');
-  fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-  src="https://www.facebook.com/tr?id=1224122878240468&ev=PageView&noscript=1"
-/></noscript>
-<!-- End Meta Pixel Code -->
-  
 </head>
 <body>
   <div class="aviso-topo">
@@ -107,26 +88,15 @@
           <div class="aviso-template">
             <p>HAZ CLIC EN LA PRESENTACIÓN Y ENTIENDE.</p>
           </div>
-          <div id="vid_64daad4f7b941e0009cafe46" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_64daad4f7b941e0009cafe46" src="https://images.converteai.net/57bd81f3-af41-4447-97c8-f3275f8290f2/players/64daad4f7b941e0009cafe46/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_64daad4f7b941e0009cafe46" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_64daad4f7b941e0009cafe46">var s=document.createElement("script");s.src="https://scripts.converteai.net/57bd81f3-af41-4447-97c8-f3275f8290f2/players/64daad4f7b941e0009cafe46/player.js",s.async=!0,document.head.appendChild(s);</script>
+          <div id="vid_64e2b2f7e1c7560009bccfca" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_64e2b2f7e1c7560009bccfca" src="https://images.converteai.net/ef34942d-b70b-439c-922c-3aa7c514f80b/players/64e2b2f7e1c7560009bccfca/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_64e2b2f7e1c7560009bccfca" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_64e2b2f7e1c7560009bccfca">var s=document.createElement("script");s.src="https://scripts.converteai.net/ef34942d-b70b-439c-922c-3aa7c514f80b/players/64e2b2f7e1c7560009bccfca/player.js",s.async=!0,document.head.appendChild(s);</script>
             <p><span id="numero-assistindo">213</span> personas están viendo ahora.</p>
          </div>
         </div>
         <div id="cta1" class="mt-4 d-none">
-    <a href="https://pay.hotmart.com/C85794040M?checkoutMode=10" class="btn-roxo" style="background-color: orange;">
+    <a href="" class="btn-roxo" style="background-color: orange;">
       <span class="span-btn">QUIERO UNIRME</span>
       <span class="span-btn2"></span>
-    </a><script type="text/javascript">
-  function importHotmart(){ 
-    var imported = document.createElement('script'); 
-    imported.src = 'https://static.hotmart.com/checkout/widget.min.js'; 
-    document.head.appendChild(imported); 
-    var link = document.createElement('link'); 
-    link.rel = 'stylesheet'; 
-    link.type = 'text/css'; 
-    link.href = 'https://static.hotmart.com/css/hotmart-fb.min.css'; 
-    document.head.appendChild(link);  } 
-  importHotmart(); 
- </script>  
+    </a>
   </div>
   <script>
   // Função para exibir o botão após 1380 segundos
@@ -136,7 +106,11 @@
     </script>
     </div>
   </header>
-  </body>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <script src="./assets/js/com.js"></script>
+</body>
 </style>
 <div id="division-bSoJGo5853747" class="bMFJBJ9016529">
 <style>.px-1{padding-left:4px;padding-right:4px}.pt-0.5{padding-top:2px}.mt-4{margin-top:16px}@media (min-width:640px){.sm\:text-sm{font-size:14px;line-height:20px}}.mt-2{margin-top:8px}.mb-2{margin-bottom:8px}.flex{display:flex}.w-full{width:100%}.space-x-1>:not([hidden])~:not([hidden]){margin-left:.25rem}.items-center{align-items:center}.font-\[Helvetica\]{font-family:Helvetica,Arial,sans-serif}.cursor-pointer{cursor:pointer}.rounded-full{border-radius:99999px}.h-12{height:48px}.w-12{width:48px}.flex-col{flex-direction:column}.py-1{padding-top:4px;padding-bottom:4px}.px-3{padding-left:12px;padding-right:12px}.pl-0\.5,.px-0\.5{padding-left:2px}.rounded-\[18px\]{border-radius:18px}.bg-stone-100{background-color:#f5f5f4}.px-0\.5{padding-right:2px}.font-semibold{font-weight:600}.text-\[\#365899\]{color:#365899}.text-\[13px\]{font-size:13px}.leading-4{line-height:16px}.hover\:underline:hover{text-decoration-line:underline}.text-sm{font-size:14px}.relative{position:relative}.justify-between{justify-content:space-between}.grow{flex-grow:1}.text-xs{font-size:12px}.text-\[\#90949c\]{color:#90949c}.ml-px{margin-left:1px}.gap-1{gap:4px}.w-fit{width:fit-content}.hidden{display:none}.-mt-1{margin-top:-4px}.-mt-2{margin-top:-8px}.mr-2{margin-right:8px}.h-4,.h-5{height:16px}.drop-shadow{--tw-drop-shadow:drop-shadow(0 1px 2px rgba(0, 0, 0, 0.1)) drop-shadow(0 1px 1px rgba(0, 0, 0, 0.06));filter:var(--tw-drop-shadow)}.bg-slate-50{background-color:#f8fafc}.py-0\.5{padding-top:2px;padding-bottom:2px}.pr-1{padding-right:4px}.block{display:block}.w-4{width:16px}.z-10{z-index:10}.-ml-1{margin-left:-4px}.ml-4{margin-left:16px}.gap-x-0\.5{column-gap:2px}.mr-0\.5{margin-right:2px;margin-left:2px}.border-l{border-left-width:1px}.border-slate-300{border-color:#cbd5e1}.border-dotted{border-style:dotted}.ml-5{margin-left:20px}.h-8{height:32px}.w-8{width:32px}.h-10{height:40px}.w-10{width:40px}@media (min-width:640px){.sm\:w-16{width:64px}.sm\:ml-12{margin-left:48px}}.pl-2{padding-left:8px}</style>
@@ -654,4 +628,5 @@ Debes iniciar sesión para dejar un comentario.
   </div>
   </header>
 </html>
+
 
