--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
             <p><span id="numero-assistindo">213</span> personas están viendo ahora.</p>
          </div>
         </div>
-        <div id="cta1" class="mt-4 d-none">
-    <a href="" class="btn-roxo" style="background-color: orange;">
-      <span class="span-btn">QUIERO UNIRME</span>
+        <div id="cta1" class="mt-4">
+    <a href="https://pay.hotmart.com/C85794040M?checkoutMode=10" class="btn-roxo" style="background-color: orange;">
+      <span class="span-btn">QUERO ME JUNTAR</span>
       <span class="span-btn2"></span>
     </a>
-  </div>
+</div>
   <script>
   // Função para exibir o botão após 1380 segundos
       setTimeout(function() {
