--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </div>
         <div id="cta1" class="mt-4">
     <a href="https://pay.hotmart.com/C85794040M?checkoutMode=10" class="btn-roxo" style="background-color: orange;">
-      <span class="span-btn">QUERO ME JUNTAR</span>
+      <span class="span-btn">QUIERO UNIRME</span>
       <span class="span-btn2"></span>
     </a>
 </div>
@@ -102,7 +102,7 @@
   // Função para exibir o botão após 1380 segundos
       setTimeout(function() {
         document.getElementById("cta1").classList.remove("d-none");
-      }, 0); // 1380 segundos em milissegundos
+      }, 1380000); // 1380 segundos em milissegundos
     </script>
     </div>
   </header>
