--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   // Função para exibir o botão após 1380 segundos
       setTimeout(function() {
         document.getElementById("cta1").classList.remove("d-none");
-      }, 1380000); // 1380 segundos em milissegundos
+      }, 1380000); // 1380000 segundos em milissegundos
     </script>
     </div>
   </header>
