--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     t.src=v;s=b.getElementsByTagName(e)[0];
     s.parentNode.insertBefore(t,s)}(window, document,'script',
     'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', '1224122878240468');
+    fbq('init', '1171118557124326');
     fbq('track', 'PageView');
   </script>
   <noscript><img height="1" width="1" style="display:none"
@@ -88,21 +88,21 @@
           <div class="aviso-template">
             <p>HAZ CLIC EN LA PRESENTACIÓN Y ENTIENDE.</p>
           </div>
-          <div id="vid_64e2b2f7e1c7560009bccfca" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_64e2b2f7e1c7560009bccfca" src="https://images.converteai.net/ef34942d-b70b-439c-922c-3aa7c514f80b/players/64e2b2f7e1c7560009bccfca/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_64e2b2f7e1c7560009bccfca" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_64e2b2f7e1c7560009bccfca">var s=document.createElement("script");s.src="https://scripts.converteai.net/ef34942d-b70b-439c-922c-3aa7c514f80b/players/64e2b2f7e1c7560009bccfca/player.js",s.async=!0,document.head.appendChild(s);</script>
+        <div id="vid_64e2b2f7e1c7560009bccfca" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_64e2b2f7e1c7560009bccfca" src="https://images.converteai.net/ef34942d-b70b-439c-922c-3aa7c514f80b/players/64e2b2f7e1c7560009bccfca/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_64e2b2f7e1c7560009bccfca" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_64e2b2f7e1c7560009bccfca">var s=document.createElement("script");s.src="https://scripts.converteai.net/ef34942d-b70b-439c-922c-3aa7c514f80b/players/64e2b2f7e1c7560009bccfca/player.js",s.async=!0,document.head.appendChild(s);</script>
             <p><span id="numero-assistindo">213</span> personas están viendo ahora.</p>
          </div>
         </div>
-        <div id="cta1" class="mt-4">
-    <a href="https://pay.hotmart.com/C85794040M?checkoutMode=10" class="btn-roxo" style="background-color: orange;">
+        <div id="cta1" class="mt-4 d-none">
+    <a href="" class="btn-roxo" style="background-color: orange;">
       <span class="span-btn">QUIERO UNIRME</span>
       <span class="span-btn2"></span>
     </a>
-</div>
- <script>
+  </div>
+  <script>
   // Função para exibir o botão após 1380 segundos
       setTimeout(function() {
         document.getElementById("cta1").classList.remove("d-none");
-      },1380000); // 1380 segundos em milissegundos
+      }, 1380000); // 1380 segundos em milissegundos
     </script>
     </div>
   </header>
@@ -628,5 +628,4 @@ Debes iniciar sesión para dejar un comentario.
   </div>
   </header>
 </html>
-
 
