--- a/QUIZ/index.html
+++ b/QUIZ/index.html
@@ -67,44 +67,59 @@
       display: none;
     }
   </style>
+   
+   <script>
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '1224122878240468');
+    fbq('track', 'AddToCart');
+  </script>
+  <noscript><img height="1" width="1" style="display:none"
+    src="https://www.facebook.com/tr?id=1224122878240468&ev=AddToCart&noscript=1"
+  /></noscript>
+
 </head>
 <body> 
   <div class="container">
     <div class="black">
       <div id="primeira">
         <div class="question">
-          <h1>Pergunta 1</h1>
-          <p>Você realmente quer descobrir esse segredo?</p>
+          <h1>PREGUNTA 1</h1>
+          <p>¿HAS INTENTADO ADELGAZAR?</p>
         </div>
         <div class="answer">
-          <button class="btn" onclick="segunda()">SIM</button>
-          <button class="btn" onclick="segunda()">NÃO</button>
+          <button class="btn" onclick="segunda()">SÍ</button>
+          <button class="btn" onclick="segunda()">NO</button>
         </div>
       </div>
       <div id="segunda" class="hide">
         <div class="question">
-          <h1>Pergunta 2</h1>
-          <p>Você promete não revelar com ninguém?</p>
+          <h1>PREGUNTA 2</h1>
+          <p>¿REALMENTE QUIERES DESCUBRIR ESTE PROTOCOLO MATUTINO?</p>
         </div>
         <div class="answer">
-          <button class="btn" onclick="terceira()">SIM</button>
-          <button class="btn" onclick="terceira()">NÃO</button>
+          <button class="btn" onclick="terceira()">SÍ</button>
+          <button class="btn" onclick="terceira()">NO</button>
         </div>
       </div>
       <div id="terceira" class="hide">
         <div class="question">
-          <h1>Pergunta 3</h1>
-          <p>O vídeo a seguir tem um limite para pouquíssimas pessoas verem ao mesmo tempo... Você pretende ver até o fim?</p>
+          <h1>PREGUNTA 3</h1>
+          <p>NO SABEMOS CUÁNTO TIEMPO PODREMOS MANTENER ESTA PRESENTACIÓN EN EL AIRE... ¿LO VERÁS HASTA EL FINAL?</p>
         </div>
         <div class="answer">
-          <button class="btn" onclick="redirect()">SIM</button>
-          <button class="btn" onclick="redirect()">NÃO</button>
+          <button class="btn" onclick="redirect()">SÍ</button>
+          <button class="btn" onclick="redirect()">NO</button>
         </div>
       </div>
     </div>
-    <p style="text-align: center; font-weight: bold;">© 2022 – Todos os direitos reservados. Este site não faz parte nem é endossado pelo Facebook. Facebook é uma marca comercial da Facebook, Inc.</p>
-    <p style="text-align: center; font-weight: bold;"><a href="https://protocolozerobarriga.com/termos" style="color: black;">Termos de Uso</a> | <a href="https://protocolozerobarriga.com/privacidade" style="color: black;">Política de Privacidade</a></p>
-  </div>
+    <p style="text-align: center; font-weight: bold;">© 2023 – Todos los derechos reservados.
   <script>
     function segunda() {
       document.getElementById("primeira").classList.add("hide")
@@ -115,7 +130,7 @@
       document.getElementById("terceira").classList.remove("hide")
     }
     function redirect() {
-      location.href = "https://protocolozerobarriga.com" // SEU LINK AQUI
+      location.href = "https://sistemacerovientre.online/" // SEU LINK AQUI
     }
   </script>
 </body>
