--- a/PS/PV SCV.html
+++ b/PS/PV SCV.html
@@ -1,75 +1,89 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <title>Sistema Cero Vientre</title>
-  <style type="text/css">
-    header {
-      background-color: #00403F;
-    }
-    header h1 {
-      color: #F2D851;
-    }
-    .areaverde {
-      background-color: #A9D9BA;
-    }
-    .areabranca {
-      background-color: white;
-    }
-  </style>
-</head>
-<body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/0572283b45.js"></script>
+    <style type="text/css">
+      nav {
+        background-color: #BF0A0A;
+        color: white;
+      }
+      .fsec {
+        background-color: #FCFCFC;
+      }
+      .fsec h1 {
+        color: #4F5AEA;
+      }
+      .fsec h4 {
+        color: #636E72;
+      }
+      .ssec {
+        background-color: #EEEEEE;
+      }
+      .btn {
+        font-size: 200%;
+        font-family: 'Oswald', sans-serif;
+        white-space: normal;
+      }
+    </style>
+  </head>
+  <body>
+    
+    <nav class="navbar justify-content-center text-center">
+      <span class="lead">
+        <i class="fas fa-exclamation-triangle mr-2"></i>ATENCIÓN: esta presentación se retirará el día <span id="dia"></span> de <span id="mes"></span>, aproveche mientras esté disponible!
+      </span>
+    </nav>
 
-  <header class="py-5">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-lg-10 text-center">
-          <h1>ESTE PROTOCOLO MATUTINO PUEDE REALMENTE HACERTE PERDER <b>10 KILOS EN 21 DÍAS</b></h1>
+    <section class="py-5 fsec">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-10 text-center">
+            <h1>ESTE PROTOCOLO MATUTINO PUEDE REALMENTE HACERTE PERDER <b>10 KILOS EN SOLO 21 DÍAS</b> </h1>
+            <h4>Transformó Mi Vida Y Recuperó Mi Cuerpo Y Confianza...</h4>
+          </div>
         </div>
       </div>
-    </div>
-  </header>
+    </section>
 
-  <section class="areaverde">
-    <div class="container mb-5">
-      <div class="row justify-content-center">
-        <div class="col text-center areabranca">
-          <section class="py-5 ssec">
-            <div class="container">
-              <div class="row justify-content-center">
-                <div class="col-lg-10 text-center">
-<a href="https://sistemacerovientre.online/" class="btn btn-success btn-lg p-4 mt-5">¡QUIERO VER LA PRESENTACIÓN AHORA!</a>
-<p class="lead px-5 mb-5 font-weight-bold mt-5">Un estudio avanzado ha demostrado que esta vitamina ACELERA el metabolismo e inflama la flacidez, corrigiendo una “causa raíz” recién descubierta de la hinchazón no deseada.</p>
-                  <p class="lead px-5 mb-5 font-weight-bold">Es 5.66 veces más potente que los entrenamientos de alta intensidad, incluso durante el sueño.</p>
-                  <p class="lead px-5 mb-5 font-weight-bold">Es 6.11 veces más potente para tonificar el trasero, el vientre, el cuello y el brazo, más rápido que cualquier dieta típica.</p>
-                  <p class="lead px-5 mb-5 font-weight-bold">Compruébalo por ti mismo...</p>
-                  <p class="lead px-5 mb-5 font-weight-bold">Haga clic en el botón de arriba para ver la presentación...</p>
-                </div>
-              </div>
-            </div>
-            <div class="container py-5">
-              <div class="row justify-content-center">
-                <div class="col text-center">
-                  <p class="font-weight-bold">Copyright 2023 - Todos los derechos reservados</p>
-                  <br>
-                </div>
-              </div>
-            </div>
-          </section>
+    <section class="py-5 ssec">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-10 text-center">
+            <a href="https://protocolozerobarriga.com/"><img class="img-fluid" src="play.png"></a>
+            <!-- TROQUE SEU LINK ONDE ESTÁ O DO PROTOCOLOZEROBARRIGA.COM, MANTENDO AS ASPAS -->
+            <a class="btn btn-success btn-lg p-4 mt-5" href="https://protocolozerobarriga.com/">¡QUIERO VER LA PRESENTACIÓN AHORA!</a>
+          </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-</body>
-
+    <footer class="py-4 bg-dark text-white">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col text-center">
+            <p class="font-weight-bold">Copyright 2023 - Todos los derechos reservados</p>
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
+    
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script>
+      monName = new Array ("Enero", "Febrero", "Marzo", "Abril", "Mayo", "Junio", "Julio", "Agosto", "Septiembre", "Octubre", "Noviembre", "Diciembre")
+
+      var data = new Date();
+      var dia = data.getDate();
+      var mes = monName[data.getMonth()];
+
+      document.getElementById("dia").innerHTML = dia
+      document.getElementById("mes").innerHTML = mes
+    </script>
   </body>
 </html>
