--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="col-lg-8 text-center">
           <h3 class="my-4"><b><p>¿POR QUÉ ESTE <span style="color: red;">PROTOCOLO MATUTINO</span> PUEDE REALMENTE HACERTE PERDER <span style="color: red;">10 KILOS EN 21 DÍAS</span>?</p></b></h3>
           <div class="aviso-template">
-            <p>HAZ CLIC EN LA PRESENTACIÓN Y ENTIENDE.</p>
+            <p>HAZ CLIC EN LA PRESENTACIÓN Y MÍRALA HASTA EL FINAL PARA ENTENDER...</p>
         <div id="vid_65431e2ee3a4410009484f00" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_65431e2ee3a4410009484f00" src="https://images.converteai.net/e3033d0e-adc7-484f-9f8e-71bbb6ea163e/players/65431e2ee3a4410009484f00/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_65431e2ee3a4410009484f00" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_65431e2ee3a4410009484f00">var s=document.createElement("script");s.src="https://scripts.converteai.net/e3033d0e-adc7-484f-9f8e-71bbb6ea163e/players/65431e2ee3a4410009484f00/player.js",s.async=!0,document.head.appendChild(s);</script>
 <p><span id="numero-assistindo">326 personas están viendo ahora... </span></p>
          </div>
