--- a/QUIZ/index.html
+++ b/QUIZ/index.html
@@ -24,6 +24,7 @@
       background: url("fundo.jpg");
       background-size: cover;
       background-repeat: no-repeat;
+      background-color: black; 
     }
     .container {
       width: 700px;
@@ -91,7 +92,7 @@
       <div id="primeira">
         <div class="question">
           <h1>PREGUNTA 1</h1>
-          <p>¿HAS INTENTADO ADELGAZAR?</p>
+          <p>DÉJAME CONOCERTE MEJOR, ¿QUIERES PERDER PESO RÁPIDAMENTE SIN UNA DIETA LOCA?</p>
         </div>
         <div class="answer">
           <button class="btn" onclick="segunda()">SÍ</button>
@@ -101,7 +102,7 @@
       <div id="segunda" class="hide">
         <div class="question">
           <h1>PREGUNTA 2</h1>
-          <p>¿REALMENTE QUIERES DESCUBRIR ESTE PROTOCOLO MATUTINO?</p>
+          <p>¿HAS INTENTADO ADELGAZAR?</p>
         </div>
         <div class="answer">
           <button class="btn" onclick="terceira()">SÍ</button>
@@ -110,8 +111,8 @@
       </div>
       <div id="terceira" class="hide">
         <div class="question">
-          <h1>PREGUNTA 3</h1>
-          <p>NO SABEMOS CUÁNTO TIEMPO PODREMOS MANTENER ESTA PRESENTACIÓN EN EL AIRE... ¿LO VERÁS HASTA EL FINAL?</p>
+          <h1>PREGUNTA FINAL</h1>
+          <p>SE ELEGIÓ UN PEQUEÑO GRUPO DE MUJERES PARA VER LA PRESENTACIÓN, ¿MIRARÁS HASTA EL FINAL PARA ENTENDER?</p>
         </div>
         <div class="answer">
           <button class="btn" onclick="redirect()">SÍ</button>
