--- a/PS/PV SCV.html
+++ b/PS/PV SCV.html
@@ -67,10 +67,10 @@
   s.parentNode.insertBefore(t,s)}(window, document,'script',
   'https://connect.facebook.net/en_US/fbevents.js');
   fbq('init', '3015723061892437');
-  fbq('track', 'AddtoCart');
+  fbq('track', 'AddToCart');
 </script>
 <noscript><img height="1" width="1" style="display:none"
-  src="https://www.facebook.com/tr?id=3015723061892437&ev=AddtoCart&noscript=1"
+  src="https://www.facebook.com/tr?id=3015723061892437&ev=AddToCart&noscript=1"
 /></noscript>
 
 </head>
