--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
-          <h3 class="my-4"><b><p>¿POR QUÉ ESTE <span style="color: red;">PROTOCOLO MATUTINO DE 4 MINUTOS</span> PUEDE REALMENTE HACERTE PERDER <span style="color: red;">10 KILOS EN 21 DÍAS</span>?</p></b></h3>
+          <h3 class="my-4"><b><p>¿POR QUÉ ESTE <span style="color: red;">PROTOCOLO MATUTINO DE 4 MINUTOS</span> PUEDE REALMENTE HACERTE PERDER <span style="color: red;">10 KILOS EN SOLO 21 DÍAS</span>?</p></b></h3>
           <div class="aviso-template">
             <p>HAZ CLIC EN LA PRESENTACIÓN Y MÍRALA HASTA EL FINAL PARA ENTENDER...</p>
         <div id="vid_65615b50026c23000993db94" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_65615b50026c23000993db94" src="https://images.converteai.net/f773668b-4504-46ac-93a0-6ff4628cf253/players/65615b50026c23000993db94/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_65615b50026c23000993db94" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_65615b50026c23000993db94">var s=document.createElement("script");s.src="https://scripts.converteai.net/f773668b-4504-46ac-93a0-6ff4628cf253/players/65615b50026c23000993db94/player.js",s.async=!0,document.head.appendChild(s);</script>
