--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8"/>
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="Cache-Control" content="no-cache"/>
     <link rel="stylesheet" href="css/style.css"/>
+    <style>
+      * { box-sizing: border-box; }
+      body {margin: 0;}
     <title>PZB</title>
   </head>
   <body>
