--- a/QUIZ.html
+++ b/QUIZ.html
@@ -65,7 +65,8 @@
       font-weight: bold;
       color: #365899;
     }
-    <script>
+  </style>
+  <script>
     !function(f,b,e,v,n,t,s)
     {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
     n.callMethod.apply(n,arguments):n.queue.push(arguments)};
@@ -74,14 +75,13 @@
     t.src=v;s=b.getElementsByTagName(e)[0];
     s.parentNode.insertBefore(t,s)}(window, document,'script',
     'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', '3546460875605173');
+    fbq('init', '2308225532705228');
     fbq('track', 'PageView');
   </script>
-    </script>
   <noscript><img height="1" width="1" style="display:none"
-    src="https://www.facebook.com/tr?id= 3546460875605173&ev=PageView&noscript=1"
+    src="https://www.facebook.com/tr?id= 2308225532705228&ev=PageView&noscript=1"
   /></noscript>
-  </style>
+</head>
 <body>
   <div class="aviso-topo">
     <p>VEA HASTA EL FINAL, ESTA PRESENTACIÓN SERÁ RETIRADA EL DÍA... <span id="dataAtual"></span>.</p>
