--- a/QUIZ.html
+++ b/QUIZ.html
@@ -103,7 +103,7 @@
   </header>
 
   <div class="text-center mt-4">
-    <a id="cta1" href="https://pay.hotmart.com/C85794040M?checkoutMode=10&bid=1694568816108" class="btn-laranja d-none">
+    <a id="cta1" href="https://pay.hotmart.com/C85794040M?checkoutMode=10" class="btn-laranja d-none">
       <span class="span-btn">¡QUIERO UNIRME!</span>
       <span class="span-btn2"></span>
     </a>
