--- a/QUIZ.html
+++ b/QUIZ.html
@@ -75,11 +75,11 @@
     t.src=v;s=b.getElementsByTagName(e)[0];
     s.parentNode.insertBefore(t,s)}(window, document,'script',
     'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', '731780392169770');
+    fbq('init', '3546460875605173');
     fbq('track', 'PageView');
   </script>
   <noscript><img height="1" width="1" style="display:none"
-    src="https://www.facebook.com/tr?id= 731780392169770&ev=PageView&noscript=1"
+    src="https://www.facebook.com/tr?id= 3546460875605173&ev=PageView&noscript=1"
   /></noscript>
 </head>
 <body>
@@ -95,7 +95,7 @@
           <div class="aviso-template">
             <p>HAZ CLIC EN LA PRESENTACIÓN Y MÍRALA HASTA EL FINAL PARA ENTENDER...</p>
           </div>
-          <iframe id="panda-615d2807-bf50-4ea5-9503-9611d95c5355" src="https://player-vz-84d8c9b2-05e.tv.pandavideo.com.br/embed/?v=615d2807-bf50-4ea5-9503-9611d95c5355" style="border:none;" allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture" allowfullscreen=true width="720" height="360" fetchpriority="high"></iframe>
+          <div id="vid_65b446d60dc92400075f69e5" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_65b446d60dc92400075f69e5" src="https://images.converteai.net/8f51ebb3-bd5d-43ae-bd70-652ec0cd3be9/players/65b446d60dc92400075f69e5/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_65b446d60dc92400075f69e5" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_65b446d60dc92400075f69e5">var s=document.createElement("script");s.src="https://scripts.converteai.net/8f51ebb3-bd5d-43ae-bd70-652ec0cd3be9/players/65b446d60dc92400075f69e5/player.js",s.async=!0,document.head.appendChild(s);</script>
           <p><span id="numero-assistindo">237</span> personas están viendo ahora.</p>
         </div>
       </div>
