--- a/QUIZ.html
+++ b/QUIZ.html
@@ -95,7 +95,7 @@
           <div class="aviso-template">
             <p>HAZ CLIC EN LA PRESENTACIÓN Y MÍRALA HASTA EL FINAL PARA ENTENDER...</p>
           </div>
-          <div id="vid_65b446d60dc92400075f69e5" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_65b446d60dc92400075f69e5" src="https://images.converteai.net/8f51ebb3-bd5d-43ae-bd70-652ec0cd3be9/players/65b446d60dc92400075f69e5/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_65b446d60dc92400075f69e5" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_65b446d60dc92400075f69e5">var s=document.createElement("script");s.src="https://scripts.converteai.net/8f51ebb3-bd5d-43ae-bd70-652ec0cd3be9/players/65b446d60dc92400075f69e5/player.js",s.async=!0,document.head.appendChild(s);</script>
+         <iframe id="panda-6643e6e6-a530-4906-9a57-5def40f5be5d" src="https://player-vz-60a6aa29-ad1.tv.pandavideo.com.br/embed/?v=6643e6e6-a530-4906-9a57-5def40f5be5d" style="border:none;" allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture" allowfullscreen=true width="720" height="360" fetchpriority="high"></iframe>
           <p><span id="numero-assistindo">237</span> personas están viendo ahora.</p>
         </div>
       </div>
