--- a/QUIZ.html
+++ b/QUIZ.html
@@ -94,8 +94,9 @@
           <h3 class="my-4"><b><p>¿POR QUÉ ESTE <span style="color: red;">PROTOCOLO MATUTINO DE 4 MINUTOS</span> DE LA <span style="color: red;">ISLA DE THANGU VALLEY </span> PUEDE REALMENTE HACERTE PERDER <span style="color: red;">10 KILOS EN 21 DÍAS</span>?</p></b></h3>
           <div class="aviso-template">
             <p>HAZ CLIC EN LA PRESENTACIÓN Y MÍRALA HASTA EL FINAL PARA ENTENDER...</p>
+           <div class="embed-responsive embed-responsive-16by9">
+            <iframe id="panda-6643e6e6-a530-4906-9a57-5def40f5be5d" src="https://player-vz-60a6aa29-ad1.tv.pandavideo.com.br/embed/?v=6643e6e6-a530-4906-9a57-5def40f5be5d" allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture" allowfullscreen></iframe>
           </div>
-         <iframe id="panda-6643e6e6-a530-4906-9a57-5def40f5be5d" src="https://player-vz-60a6aa29-ad1.tv.pandavideo.com.br/embed/?v=6643e6e6-a530-4906-9a57-5def40f5be5d" style="border:none;" allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture" allowfullscreen=true width="720" height="360" fetchpriority="high"></iframe>
           <p><span id="numero-assistindo">237</span> personas están viendo ahora.</p>
         </div>
       </div>
