--- a/QUIZ.html
+++ b/QUIZ.html
@@ -95,7 +95,7 @@
           <div class="aviso-template">
             <p>HAZ CLIC EN LA PRESENTACIÓN Y MÍRALA HASTA EL FINAL PARA ENTENDER...</p>
            <div class="embed-responsive embed-responsive-16by9">
-            <iframe id="panda-6643e6e6-a530-4906-9a57-5def40f5be5d" src="https://player-vz-60a6aa29-ad1.tv.pandavideo.com.br/embed/?v=6643e6e6-a530-4906-9a57-5def40f5be5d" allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture" allowfullscreen></iframe>
+            <iframe id="panda-42e40031-95b6-4819-a5c3-792fd5b69b7c" src="https://player-vz-60a6aa29-ad1.tv.pandavideo.com.br/embed/?v=42e40031-95b6-4819-a5c3-792fd5b69b7c" style="border:none;" allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture" allowfullscreen=true width="720" height="360" fetchpriority="high"></iframe>
           </div>
           <p><span id="numero-assistindo">237</span> personas están viendo ahora.</p>
         </div>
