--- a/QUIZ.html
+++ b/QUIZ.html
@@ -95,7 +95,7 @@
           <div class="aviso-template">
             <p>HAZ CLIC EN LA PRESENTACIÓN Y MÍRALA HASTA EL FINAL PARA ENTENDER...</p>
            <div class="embed-responsive embed-responsive-16by9">
-            <iframe id="panda-42e40031-95b6-4819-a5c3-792fd5b69b7c" src="https://player-vz-60a6aa29-ad1.tv.pandavideo.com.br/embed/?v=42e40031-95b6-4819-a5c3-792fd5b69b7c" style="border:none;" allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture" allowfullscreen=true width="720" height="360" fetchpriority="high"></iframe>
+           <div id="vid_65f8c2ee39cdb20008088d28" style="position:relative;width:100%;padding: 56.25% 0 0;"> <img id="thumb_65f8c2ee39cdb20008088d28" src="https://images.converteai.net/68d798cc-1b0d-47b6-916a-b5e9df8ede6a/players/65f8c2ee39cdb20008088d28/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"> <div id="backdrop_65f8c2ee39cdb20008088d28" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div> </div> <script type="text/javascript" id="scr_65f8c2ee39cdb20008088d28"> var s=document.createElement("script"); s.src="https://scripts.converteai.net/68d798cc-1b0d-47b6-916a-b5e9df8ede6a/players/65f8c2ee39cdb20008088d28/player.js", s.async=!0,document.head.appendChild(s); </script>
           </div>
           <p><span id="numero-assistindo">237</span> personas están viendo ahora.</p>
         </div>
