--- a/QUIZ.html
+++ b/QUIZ.html
@@ -72,7 +72,7 @@
     }
 
     // Chama a função para atualizar a data atual
-    atualizarDataAtual();
+    atualizarDataAtual(.);
   </script>
   <script>
     !function(f,b,e,v,n,t,s)
