--- a/QUIZ.html
+++ b/QUIZ.html
@@ -72,7 +72,7 @@
     }
 
     // Chama a função para atualizar a data atual
-    atualizarDataAtual(.);
+    atualizarDataAtual();
   </script>
   <script>
     !function(f,b,e,v,n,t,s)
@@ -92,7 +92,7 @@
 </head>
 <body>
   <div class="aviso-topo">
-    <p>VEA HASTA EL FINAL, ESTA PRESENTACIÓN SERÁ RETIRADA EL DÍA... <span id="dataAtual"></span>.</p>
+    <p>VEA HASTA EL FINAL, ESTA PRESENTACIÓN SERÁ RETIRADA HOY... <span id="dataAtual"></span>.</p>
   </div>
 
   <header class="py-4">
