--- a/QUIZ.html
+++ b/QUIZ.html
@@ -92,7 +92,7 @@
 </head>
 <body>
   <div class="aviso-topo">
-    <p>VEA HASTA EL FINAL, ESTA PRESENTACIÓN SERÁ RETIRADA HOY... <span id="dataAtual"></span>.</p>
+    <p>VEA HASTA EL FINAL, ESTA PRESENTACIÓN SERÁ RETIRADA HOY... <span id="dataAtual"></span></p>
   </div>
 
   <header class="py-4">
